# GDSearch

./: .gitattributes  .gitignore  CHECKLIST.py  FINAL_SUMMARY.md  KAGGLE_SCIENTIFIC_ASSESSMENT.md  PROJECT_SUMMARY.py  QUICKSTART.py  README.md  README_PROJECT.md  RESTRUCTURE_PLAN.md  RESTRUCTURING_COMPLETE.md  demo.py  models.py  optimizer_wrappers.py  plot_results.py  pyproject.toml  requirements.txt  run_experiment.py  run_nn_experiment.py  test_sample.py
configs/: cifar10_tuning.json  nn_tuning.json
docs/: CRITICAL_VALIDATION_REPORT.md  DE_TAI_VALIDATION_REPORT.md  IMPROVEMENT_PROGRESS.md  INDEX.md  LIMITATIONS.md  MULTISEED_GUIDE.md  OUTLINE_MAPPING.md  PHASE11_NLP_SUMMARY.md  PHASE12_RESNET_SUMMARY.md  PHASE13_HIGHDIM_SUMMARY.md  PHASE14_STATISTICAL_SUMMARY.md  PRACTITIONER_HANDBOOK.md  QUICK_START.md  RESEARCH_JOURNAL.md  SCIENTIFIC_RIGOR_PROTOCOL.md  Tìm nguồn báo cáo nghiên cứu uy tín.md  Đăng Ký Đề Tài NCKH.md
docs/archive/: RESTRUCTURING_COMPLETE.md
kaggle/: INSTRUCTIONS.md  QUICKSTART.md  README.md  RESULTS_resnet18.md  publication_figures.ipynb  requirements_kaggle.txt  resnet18_cifar10.py  verify_local.py
kaggle/cifar10_publication/: README.md  cifar10_publication.ipynb  cifar10_publication.py
kaggle/medical_publication/: README.md  medical_publication.ipynb  (+1 more)
results/: EXPERIMENT_REPORT.md  NN_SimpleMLP_MNIST_AdamW_lr0.0001_seed1_sweepLR.csv  NN_SimpleMLP_MNIST_AdamW_lr0.001_seed1.csv  NN_SimpleMLP_MNIST_AdamW_lr0.001_seed1_final.csv  NN_SimpleMLP_MNIST_AdamW_lr0.001_seed1_sweepLR.csv  NN_SimpleMLP_MNIST_AdamW_lr0.001_seed1_sweepWD.csv  NN_SimpleMLP_MNIST_AdamW_lr0.001_seed1_wd0.0001_sweepWD.csv  NN_SimpleMLP_MNIST_AdamW_lr0.001_seed1_wd0.0005_sweepWD.csv  NN_SimpleMLP_MNIST_AdamW_lr0.01_seed1_sweepLR.csv  NN_SimpleMLP_MNIST_AdamW_lr0.1_seed1_sweepLR.csv  NN_SimpleMLP_MNIST_SGD_Momentum_lr0.001_seed1_mom0.9_sweepLR.csv  NN_SimpleMLP_MNIST_SGD_Momentum_lr0.01_seed1_mom0.9_sweepLR.csv  NN_SimpleMLP_MNIST_SGD_Momentum_lr0.05_seed1.csv  NN_SimpleMLP_MNIST_SGD_Momentum_lr0.05_seed1_mom0.5_sweepMOM.csv  NN_SimpleMLP_MNIST_SGD_Momentum_lr0.05_seed1_mom0.9_final.csv  NN_SimpleMLP_MNIST_SGD_Momentum_lr0.05_seed1_mom0.9_sweepLR.csv  NN_SimpleMLP_MNIST_SGD_Momentum_lr0.05_seed1_mom0.9_sweepMOM.csv  NN_SimpleMLP_MNIST_SGD_Momentum_lr0.05_seed1_sweepMOM.csv  NN_SimpleMLP_MNIST_SGD_Momentum_lr0.1_seed1_mom0.9_sweepLR.csv  RESULTS_README.md  sample_Adam_Rosenbrock_lr0.01_seed42.csv  sample_RMSProp_IllConditionedQuadratic_lr0.01_seed42.csv  sample_SGD_Rosenbrock_lr0.001_seed42.csv  summary_qualitative.csv  summary_qualitative.md  summary_quantitative.csv  table_ablation.tex  table_robustness.tex
scripts/: compute_tradeoffs.py  demo_highdim_optimization.py  demo_imdb_training.py  demo_lr_schedulers.py  demo_resnet18_training.py  generate_appendix.py  generate_cifar10_statistical_report.py  generate_latex_tables.py  generate_statistical_report.py  generate_summaries.py  optuna_tune_mnist.py  run_all.py  run_mnist_publication.py  run_nn_ablation.py  run_publication_experiments.py  so_what_analysis.py  tune_nn.py
src/: __init__.py
tests/: __init__.py  test_ackley2d.py  test_gradients.py  test_highdim_functions.py  test_interactive_plots.py  test_lr_schedulers.py  test_nlp.py  test_optimizers.py  test_optuna_tuner.py  test_resnet.py  test_statistical_enhancements.py
(+42 files in other folders)
